--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,10 +1,12 @@
 <div class="navigation-wrapper">
 	<div class="site-name">
 		{% if site.logo %}
-		<a href="{{ site.github.url }}/"><img src="{{ site.github.url }}/images/{{ site.logo }} "></a>
+		<div class="logo-meter">
+		<a href="{{ site.github.url }}/"><img src="{{ site.github.url }}/images/{{ site.logo }} " width='200'></a>
 		{% else %}
 		<a href="{{ site.github.url }}/">{{ site.title }}</a>
 		{% endif %}
+	</div>
 	</div><!-- /.site-name -->
 	<div class="top-navigation">
 		<nav role="navigation" id="site-nav" class="nav">
