--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -57,12 +57,12 @@ body {
 
 /* Top navigation links */
 .top-navigation {
-	@include grid(12,1);
-	@include prefix(12,1);
-	@include suffix(12,1);
+	@include grid(12,10);
+	@include prefix(12,0);
+	@include suffix(12,0);
 	margin-bottom: 1em;
 	float: none;
-	display: inline;
+	display: block;
 	@media #{$small} {
 		@include grid(12,9);
 		@include prefix(12,0);
@@ -88,7 +88,7 @@ body {
 		}
 		@media #{$small} {
 			display: inline;
-			margin-right: 50px;
+			margin-right: 25px;
 			white-space: nowrap;
 			border-bottom: 0 solid transparent;
 		}
@@ -246,18 +246,16 @@ $button-size: 1.5rem;
 	.page {
 		@include container;
 		@include grid(12,10);
-		@include prefix(12,0);
-		@include suffix(12,0);
+		@include prefix(12,1);
+		@include suffix(12,1);
 		margin-bottom: 2em;
 		@media #{$small} {
-			@include grid(12,8);
+			@include grid(12,6);
 			@include prefix(12,0);
 			@include suffix(12,0);
 		}
 		@media #{$x-large} {
-			@include grid(12,6.5);
-			@include prefix(12,0);
-			@include suffix(12,0);
+			@include grid(12,4.5);
 		}
 	}
 }
@@ -270,12 +268,12 @@ $button-size: 1.5rem;
 	@include suffix(12,1);
 	margin-bottom: 2em;
 	@media #{$small} {
-		@include grid(12,4);
-		@include prefix(12,1);
-		@include suffix(12,1);
+		@include grid(12,6);
+		@include prefix(12,0);
+		@include suffix(12,0);
 	}
 	@media #{$x-large} {
-		@include grid(12,6.5);
+		@include grid(12,4.5);
 	}
 	h3 {
 		margin: 0;
@@ -392,12 +390,12 @@ $button-size: 1.5rem;
 .article-author-side {
 	display: none;
 	.bio-photo {
-		max-width: 400px;
+		max-width: 400;
 		@include rounded(150px);
 	}
 	@media #{$small} {
 		display: block;
-		@include grid(12,6);
+		@include grid(12,2);
 		@include prefix(12,0.5);
 		@include suffix(12,0.5);
 		h3,
