--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -14,9 +14,10 @@ body {
 
 .navigation-wrapper {
 	@include container;
-	padding: 2em 0 1em; /*looks like top of page to top of nav*/
+	width: 100% ;
+	padding: 2.5em 0 1em; /*looks like top of page to top of nav*/
 	font-family: $heading-font;
-	font-weight: 700;
+	font-weight: 900;
 	text-transform: uppercase;
 	@include clearfix;
 	border-bottom-style: solid;
@@ -26,7 +27,7 @@ body {
 
 /* Site name */
 .site-name {
-	@include grid(12,10);
+	@include grid(12,1);
 	@include prefix(12,1); 
 	@include suffix(12,1); 
 	margin-bottom: 0.5em; 
@@ -90,7 +91,7 @@ body {
 		}
 		@media #{$small} {
 			display: inline;
-			margin-right: 25px;
+			margin-right: 55px;
 			white-space: nowrap;
 			border-bottom: 0 solid transparent;
 		}
@@ -401,7 +402,7 @@ $button-size: 1.5rem;
 	@media #{$small} {
 		display: block;
 		@include grid(12,2);
-		@include prefix(12,0.5);
+		@include prefix(12,1.0);
 		@include suffix(12,0.5);
 		h3,
 		p,
